# evacuation-traffic-games

./: .gitignore  README.md  pyproject.toml
notebooks/: evac_simulation.ipynb
src/evacsim/: __init__.py  plotting.py  policies.py  sim.py
