[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evacsim"
version = "0.1.0"
description = "Queue-based evacuation traffic simulation with signal control policies."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
